Java 9 Boolean.valueOf